--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -86,8 +86,8 @@
     <LinkIncremental>true</LinkIncremental>
     <GenerateManifest>true</GenerateManifest>
     <ExecutablePath>$(DXSDK_DIR)Utilities\bin\x86;$(ExecutablePath)</ExecutablePath>
-    <IncludePath>..\Engine;C:\projects\project\Tutorial01\Tutorial01\external\fbxsdk\include;$(DXSDK_DIR)Include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\projects\project\Tutorial01\Tutorial01\external\fbxsdk\lib\vs2010\x86;C:\Users\kulkal.NC-KOREA\Documents\GitHub\project\Tutorial01\Tutorial01\external\fbxsdk\lib\vs2010\x86;$(DXSDK_DIR)Lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\External\fbxsdk\include;..\Engine;$(DXSDK_DIR)Include;$(IncludePath)</IncludePath>
+    <LibraryPath>..\External\fbxsdk\lib\vs2010\x86\;$(DXSDK_DIR)Lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|X64'">
     <LinkIncremental>true</LinkIncremental>
