--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -23,9 +23,6 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Shaders\ComblineShader.fx">
-      <Filter>Shaders</Filter>
-    </None>
     <None Include="Shaders\Common.hlsl">
       <Filter>Shaders</Filter>
     </None>
@@ -57,6 +54,9 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="Shaders\VSPSInput.hlsl">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\CombineShader.fx">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
